made some changes to fix a font overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -45,7 +45,7 @@ main {
             }
             h1 {
                 color: $first-clr;
-                font-size: 4.5vmax;
+                font-size: 4vmax;
                 line-height: 1.2;
                 }
             span {
@@ -152,7 +152,7 @@ main {
                             height: 100%;
                         }
                         h1 {
-                            font-size: 4.5vmax;
+                            font-size: 4vmax;
                             line-height: 1.2;
                         }
                         p {
